--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -1,14 +1,5 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script type="text/javascript">
-	$(document).ready(function() {
-	    $("#temas_intra").change(function() {
-            $("link").attr("href","[% temas %]/"+$("#temas_intra").val()+"/includes/intranet.css");
-	        return false;
-	    });
-	});
-</script>	
-
 <form class="form-horizontal" id="user-settings" method="POST" action="[% url_prefix %]/usuarios/reales/settings.pl" onsubmit="javascript:startOverlay();">
         <fieldset>
 	          <legend>
@@ -18,7 +9,14 @@
 	              <label class="control-label" for="languages">[% "Idioma" | i18n %]</label>
 	              <div class="controls">
 	                  [% languages %]
-                      <p class="help-block">[% "Idioma en que se ver&aacute; Meran " | i18n %]</p>	                  
+	                  
+                      [% PERL %]
+	                  
+                          print C4::AR::Filtros::setHelpInput(
+                                    text  => "[% 'Idioma en que se ver&aacute; Meran' | i18n %]",
+                            );
+                    
+                      [% END %]                  
 	              </div>
 	           </div>
 	           <div class="control-group">
@@ -26,7 +24,7 @@
 		           <div class="controls">
 			            <div class="input-prepend">
 			              <span class="add-on"><i class="icon-envelope"></i></span>
-			              <input class="span3" type="text" name="email" id="email" value="[% socio_data.usr_email %]">
+			              <input class="span3" type="email" name="email" id="email" value="[% socio_data.usr_email %]">
 			            </div>		               
 		           </div>
 	               <input type="hidden" name="token" value="[% token %]" />
