--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -2,167 +2,80 @@
     $(document).ready(function() {
         mostrarTabla();
     });
-    
-    function mostrarTabla(){
-        objAH               = new AjaxHelper(updateMostrarTabla);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_CAMPO';
-        objAH.ejemplar      = $("#tipo_nivel3_id").val();
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.sendToServer();
-    }
-    
-    function updateMostrarTabla(responseText){
-        $("#tablaResultCampos").html(responseText);
-        zebra("tabla_datos");  
-    }
-    
-    var campo;
-
-    function editSubcampos(campo_parametro){
-        campo               = campo_parametro;
-        objAH               = new AjaxHelper(updateEditSubcampos);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
-        objAH.campo         = campo
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.template      = $("#tipo_nivel3_id").val();;
-        objAH.sendToServer();
-    }
-    
-    function updateEditSubcampos(responseText){
-        $("#tablaResultSubCampos").html(responseText);
-        zebra("tabla_datos_sub_campos");  
-    }
-    
-    function actualizarOrdenSubCampos(){
-        objAH               = new AjaxHelper(updateSortableSC);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.showOverlay   = true;
-        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_SUBCAMPOS";
-        objAH.newOrderArray = $('#sortable_subcampo').sortable('toArray');
-        objAH.sendToServer(); 
-    }
-    
-    function updateSortableSC(){
-        editSubcampos(campo);        
-    }
-    
-    function actualizarOrdenCampo(){
-        objAH               = new AjaxHelper(updateSortable);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.showOverlay   = true;
-        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
-        objAH.newOrderArray = $('#sortable').sortable('toArray');
-        objAH.sendToServer(); 
-    }
-    
-    function updateSortable(){
-        mostrarTabla();        
-    }
-    
-    function eliminarTodoElCampo(campo){
-        objAH               = new AjaxHelper(updateEliminarTodoCampo);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
-        objAH.tipoAccion    = 'ELIMINAR_TODO_EL_CAMPO';
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.ejemplar      = $("#tipo_nivel3_id").val();
-        
-        if (campo){
-            jConfirm(SEGURO_QUE_DESEA_ELIMINAR_TODO_EL_CAMPO,CATALOGO_ALERT_TITLE, function(confirmStatus){
-                if (confirmStatus){
-                    objAH.campo         = campo;
-                    objAH.sendToServer();
-                }
-            });
-        }
-    }
-    
-    function updateEliminarTodoCampo(responseText){
-        var Messages        = JSONstring.toObject(responseText);
-        setMessages(Messages);
-        mostrarTabla();
-        eleccionDeEjemplar();
-    }
-    
 </script>
-<form class="form-horizontal">
-<fieldset>
-    <legend class="titulo_legend trigger click">[% "Agregar Visualizaci&oacute;n:" | i18n %]</legend>
-    <div class="divTablaAgregarVisualizacion" id="divTablaAgregarVisualizacion">
-    
-        <div class="control-group">
-            <label class="control-label" for="campoX"> [% "Selecci&oacute;n" | i18n %]: </label>
-            <div class="controls">
-                [% selectCampoX %]
-            </div>
-        </div>
-        
-        <div class="control-group">
-            <label class="control-label" for="campo"> [% "Campo" | i18n %]: </label>
-            <div class="controls">
-                <select name="campo" id="campo" onChange="eleccionCampo()">
-                        <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
-                    </select>
-                [% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
-            </div>
-        </div>
-        
-        <div class="control-group">
-            <label class="control-label" for="subcampo"> [% "Subcampo" | i18n %]: </label>
-            <div class="controls">
-                <select name="subcampo" id="subcampo" onChange="eleccionSubCampo()">
-                        <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
-                </select>
-            </div>
-        </div>
-        
-        <div class="control-group">
-            <label class="control-label" for="pre"> [% "Pre" | i18n %]: </label>
-            <div class="controls">
-                <input id="pre" type="text" value="" size="50">
-            </div>
-        </div>
-        
-        <div class="control-group">
-            <label class="control-label" for="liblibrarian"> [% "Vista en Intranet" | i18n %]: </label>
-            <div class="controls">
-                <input id="liblibrarian" type="text" value="" size="90">
-            </div>
-        </div>
-        
-        <div class="control-group">
-            <label class="control-label" for="post"> [% "Post" | i18n %]: </label>
-            <div class="controls">
-                <input id="post" type="text" value="" size="50">
-            </div>
-        </div>
 
-        <div class="form-actions">
-            [% PERL %]
-                    print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
-                                                        boton   => "btn btn-primary",
-                                                        onClick => "agregarVisualizacion()",
-                                                        title   => "[% 'Agregar Vista' | i18n %]",
-                                                        width => "auto",
-                                                        alternClass => "botonCentrado",
-                                                        inline => "1"
-                            ) ;
-            [% END %]
 
-      </div>
-    </div>
-</fieldset>
-</form>
-
+<div id="add_vista_intra" class="modal hide fade">
+	<form class="form-horizontal">
+	    <div class="modal-header">
+	         <a href="#" class="close" data-dismiss="modal">×</a>
+	        <h3>[% "Agregar Visualizaci&oacute;n:" | i18n %]</h3>
+	    </div>
+	     <div class="modal-body">
+	       <div class="form-horizontal">
+	         <div class="control-group">
+	            <label class="control-label" for="campoX"> [% "Selecci&oacute;n" | i18n %]: </label>
+	            <div class="controls">
+	                [% selectCampoX %]
+	            </div>
+	        </div>
+	        
+	        <div class="control-group">
+	            <label class="control-label" for="campo"> [% "Campo" | i18n %]: </label>
+	            <div class="controls">
+	                <select name="campo" id="campo" onChange="eleccionCampo()">
+	                        <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
+	                    </select>
+	                [% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
+	            </div>
+	        </div>
+	        
+	        <div class="control-group">
+	            <label class="control-label" for="subcampo"> [% "Subcampo" | i18n %]: </label>
+	            <div class="controls">
+	                <select name="subcampo" id="subcampo" onChange="eleccionSubCampo()">
+	                        <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
+	                </select>
+	            </div>
+	        </div>
+	        
+	        <div class="control-group">
+	            <label class="control-label" for="pre"> [% "Pre" | i18n %]: </label>
+	            <div class="controls">
+	                <input id="pre" type="text" value="" size="50">
+	            </div>
+	        </div>
+	        
+	        <div class="control-group">
+	            <label class="control-label" for="liblibrarian"> [% "Vista en Intranet" | i18n %]: </label>
+	            <div class="controls">
+	                <input id="liblibrarian" type="text" value="" size="90">
+	            </div>
+	        </div>
+	        
+	        <div class="control-group">
+	            <label class="control-label" for="post"> [% "Post" | i18n %]: </label>
+	            <div class="controls">
+	                <input id="post" type="text" value="" size="50">
+	            </div>
+	        </div>
+	
+	        <div class="form-actions">
+	            [% PERL %]
+	                    print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
+	                                                        boton   => "btn btn-primary",
+	                                                        onClick => "agregarVisualizacion()",
+	                                                        title   => "[% 'Agregar Vista' | i18n %]",
+	                                                        width => "auto",
+	                                                        alternClass => "botonCentrado",
+	                                                        inline => "1"
+	                            ) ;
+	            [% END %]
+	      </div>
+	    </div>
+	  </div>
+	</form>
+</div>
 <div id="divAgregarModificarVisualizacion"></div>
 <div id="tablaResultCampos"></div>
 <div id="tablaResultSubCampos"></div>
