--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -2,131 +2,17 @@
     $(document).ready(function() {
         mostrarTabla();
     });
-    
-    function mostrarTabla(){
-        objAH               = new AjaxHelper(updateMostrarTabla);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_CAMPO';
-        objAH.ejemplar      = $("#tipo_nivel3_id").val();
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.sendToServer();
-    }
-    
-    function updateMostrarTabla(responseText){
-        $("#tablaResultCampos").html(responseText);
-        //zebra("tabla_datos");  
-    }
-    
-    function actualizarOrdenCampo(){
-        objAH               = new AjaxHelper(updateSortable);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.showOverlay   = true;
-        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
-        objAH.newOrderArray = $('#sortable').sortable('toArray');
-        objAH.sendToServer(); 
-    }
-    
-    function updateSortable(){
-        mostrarTabla();        
-    }
-    
-    var campo;
-    function editSubcampos(campo_parametro){
-        campo               = campo_parametro;
-        objAH               = new AjaxHelper(updateEditSubcampos);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
-        objAH.campo         = campo;
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.template      = $("#tipo_nivel3_id").val();;
-        objAH.sendToServer();
-    }
-    
-    function updateEditSubcampos(responseText){
-        $("#tablaResultSubCampos").html(responseText);
-        //zebra("tabla_datos_sub_campos");  
-    }
-    
-        function actualizarOrdenSubCampos(){
-        objAH               = new AjaxHelper(updateSortableSC);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.showOverlay   = true;
-        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_SUBCAMPOS";
-        objAH.newOrderArray = $('#sortable_subcampo').sortable('toArray');
-        objAH.sendToServer(); 
-    }
-    
-    function updateSortableSC(){
-        editSubcampos(campo);        
-    }
-    
-    function actualizarOrden(){
-        objAH               = new AjaxHelper(updateSortable);
-        objAH.debug         = true;
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.showOverlay   = true;
-        // si estamos agrupando por campo o no
-        if($("#ordenar_campos").is(':checked')){
-            objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
-        }else{
-            objAH.tipoAccion    = "ACTUALIZAR_ORDEN";
-        }
-        objAH.newOrderArray = $('#sortable').sortable('toArray');
-        objAH.sendToServer(); 
-    }
-    
-    function updateSortable(){
-        mostrarTabla();        
-    }
-    
-    function eliminarTodoElCampo(campo){
-        objAH               = new AjaxHelper(updateEliminarTodoCampo);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;  
-        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.tipoAccion    = 'ELIMINAR_TODO_EL_CAMPO';
-        objAH.nivel         = $("#eleccion_nivel").val();
-        objAH.ejemplar      = $("#tipo_nivel3_id").val();
-        
-        if (campo){
-        jConfirm(SEGURO_QUE_DESEA_ELIMINAR_TODO_EL_CAMPO,CATALOGO_ALERT_TITLE, function(confirmStatus){
-            if (confirmStatus){
-                objAH.campo         = campo;
-                objAH.sendToServer();
-            }
-        });
-    }
-    }
-    
-    function updateEliminarTodoCampo(responseText){
-        var Messages        = JSONstring.toObject(responseText);
-        setMessages(Messages);
-        mostrarTabla();
-        eleccionDeEjemplar();
-    }
-    
-    
-    function showAddVistaOPAC(){
-    	('#add_vista_opac').modal();
-    }
-
-    
-    function hideAddVistaOPAC(){
-        ('#add_vista_opac').modal('hide');
-    }
 </script>
 
+
 <div id="add_vista_opac" class="modal hide fade">
-	<div class="form-horizontal">
-		<fieldset>
-		    <legend>[% "Agregar Visualizaci&oacute;n:" | i18n %]</legend>
-		    
+    <div class="modal-header">
+         <a href="#" class="close" data-dismiss="modal">×</a>
+        <h3>[% "Agregar Visualizaci&oacute;n:" | i18n %]</h3>
+    </div>
+
+     <div class="modal-body">
+            <div class="form-horizontal">
 		        <div class="control-group">
 		            <label class="control-label" for="campoX"> [% "Selecci&oacute;n" | i18n %]: </label>
 		            <div class="controls">
@@ -173,22 +59,23 @@
 		                <input id="post" type="text" value="" size="50">
 		            </div>
 		        </div>
-		
-		        <div class="form-actions">
-		            [% PERL %]
-		                    print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
-		                                                        boton   => "btn btn-primary",
-		                                                        onClick => "agregarVisualizacion()",
-		                                                        title   => "[% 'Agregar Vista' | i18n %]",
-		                                                        width => "auto",
-		                                                        alternClass => "botonCentrado",
-		                                                        inline => "1"
-		                            ) ;
-		            [% END %]
-		
-		      </div>
-		</fieldset>
+		</div>
 	</div>
+
+    <div class="modal-footer">
+        [% PERL %]
+                print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar Vista' | i18n %]",
+                                                    boton   => "btn btn-primary",
+                                                    onClick => "agregarVisualizacion()",
+                                                    title   => "[% 'Agregar Vista' | i18n %]",
+                                                    width => "auto",
+                                                    alternClass => "botonCentrado",
+                                                    inline => "1"
+                        ) ;
+        [% END %]
+
+  </div>
+
 </div>
 
 <div id="divAgregarModificarVisualizacion"></div>
