--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -1,25 +1,25 @@
 [% INCLUDE "intranet-top.inc" %]
 <script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
 
-<div id="nuevo_estante" style="display:none">
-<fieldset class="resultados_busqueda">
-<legend class="titulo_legend trigger click">  [% "Nuevo Estante" | i18n %] </legend>
-            <input type="text" id="input_nuevo_estante">
-            <script type="text/javascript">
-                        $(document).ready(function() {
-                                    $('#input_nuevo_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarEstante();}}});
-                        });
-            </script>
-            </fieldset>
-                      [% PERL %]
-                                                print C4::AR::Filtros::action_button(   
-                                                                            
-                                                                                    button   => "btn btn-primary",
-                                                                                    action   => 'agregarEstante();',
-                                                                                    title    => "[% 'Guardar' | i18n %]",
-                                                                               
-                                                        ) ;
-                      [% END %]
+<div id="nuevo_estante" class="modal hide fade">
+	<fieldset class="resultados_busqueda">
+	   <legend class="titulo_legend trigger click">  [% "Nuevo Estante" | i18n %] </legend>
+	            <input type="text" id="input_nuevo_estante">
+	            <script type="text/javascript">
+	                        $(document).ready(function() {
+	                                    $('#input_nuevo_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarEstante();}}});
+	                        });
+	            </script>
+    </fieldset>
+	                      [% PERL %]
+	                                                print C4::AR::Filtros::action_button(   
+	                                                                            
+	                                                                                    button   => "btn btn-primary",
+	                                                                                    action   => 'agregarEstante();',
+	                                                                                    title    => "[% 'Guardar' | i18n %]",
+	                                                                               
+	                                                        ) ;
+	                      [% END %]
 </div>
 
 <div id="nuevo_sub_estante" style="display:none">
