--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/printPrestInterBiblio.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/printPrestInterBiblio.tmpl
@@ -26,14 +26,7 @@
     <div class="modal-body">
 	    <form class="form-horizontal" name="info" id="info" action="[% url_prefix %]/usuarios/prestamoInterBiblio.pl" method="POST">
 	    <fieldset>
-	       <legend>[% 'Completar Datos' | i18n %] [% 'para' | i18n %] [% 'el' | i18n %] </legend>
-			<input type="hidden" name="nro_socio" id="nro_socio" value="[% nro_socio %]">
-			<input type="hidden" name="accion" id="accion" value="imprimirPDF">
-	        <input type="hidden" name="autores" id="autores">
-			<input type="hidden" name="titulos" id="titulos" />
-			<input type="hidden" name="otros" id="otros" />
-			<input type="hidden" name="token" value="[% token %]"/>
-
+	       <legend>[% 'Datos del pr&eacute;stamo' | i18n %] </legend>
 			<div class="control-group">
 	            <label class="control-label" for="id_ui">[% "Biblioteca" | i18n %]:</label>
 	            <div class="controls">
@@ -47,17 +40,29 @@
                 </div>
             </div>						
             
+            <input type="hidden" name="nro_socio" id="nro_socio" value="[% nro_socio %]">
+            <input type="hidden" name="accion" id="accion" value="imprimirPDF">
+            <input type="hidden" name="autores" id="autores">
+            <input type="hidden" name="titulos" id="titulos" />
+            <input type="hidden" name="otros" id="otros" />
+            <input type="hidden" name="token" value="[% token %]"/>
+
+
             <div clas="form-inline">
 		        <fieldset>
-		           <legend>[% 'Datos de los documentos' | i18n %] [% 'para' | i18n %] [% 'el' | i18n %] </legend>
+		           <legend>[% 'Datos de los documentos' | i18n %] </legend>
 	
-					<input type=text name="autor1" id="autor1" value="" placeholder='[% "Autor" | i18n %]'>
-					<input type=text name="titulo1" id="titulo1" value="" placeholder='[% "T&iacute;tulo" | i18n %]'>
-					<input type=text name="otro1" id="otro1" value="" placeholder='[% "Otros Datos" | i18n %]'>
-	
-	                <input type=text name="autor2" id="autor2" value="" placeholder='[% "Autor" | i18n %]'>
-	                <input type=text name="titulo2" id="titulo2" value="" placeholder='[% "T&iacute;tulo" | i18n %]'>
-	                <input type=text name="otro2" id="otro2" value="" placeholder='[% "Otros Datos" | i18n %]'>
+					<div class="control-group">
+						<input type=text name="autor1" id="autor1" value="" placeholder='[% "Autor" | i18n %]'>
+						<input type=text name="titulo1" id="titulo1" value="" placeholder='[% "T&iacute;tulo" | i18n %]'>
+						<input type=text name="otro1" id="otro1" value="" placeholder='[% "Otros Datos" | i18n %]'>
+                        <p class="help-block">[% "Complete lo siguiente s&oacute;lo si es necesario" | i18n %]</p>
+                    </div>
+                    <div class="control-group">
+		                <input type=text name="autor2" id="autor2" value="" placeholder='[% "Autor" | i18n %]'>
+		                <input type=text name="titulo2" id="titulo2" value="" placeholder='[% "T&iacute;tulo" | i18n %]'>
+		                <input type=text name="otro2" id="otro2" value="" placeholder='[% "Otros Datos" | i18n %]'>
+                    </div>
 	            </fieldset>
 			</div>
 
