--- a/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
@@ -35,35 +35,34 @@ function consultar(){
 
 </script>
 
-<fieldset>
+<section class="center-section-form">
     <form class="form-horizontal">
-    <legend class="titulo_legend">[% "Reservas activas" | i18n %]</legend>
-    <section class="center-section-form">
-  
-          <div class="control-group">
-              <label class="control-label" for="tipoReserva">[% "Seleccione el tipo de reserva" | i18n %]</label>
-              <div class="controls">
-                  <select name="tipoReserva" id="tipoReserva" onchange="consultar();">
-                      <option selected="selected" value="EJ" id="EJ">[% "Por ejemplar" | i18n %]</option>
-                      <option value="GR" id="GR">[% "Por grupo" | i18n %]</option>
-                      <option value="TO" id="TO">[% "Todas" | i18n %]</option>
-                  </select>
-              </div>
-          </div>
-    
-          <!--<div class="form-actions">
-                [% PERL %]
-                                print C4::AR::Filtros::to_Button( 
-                                                                    text    =>  "[% 'Buscar' | i18n %]",
-                                                                    boton   =>  "btn btn-primary",
-                                                                    onClick =>  "consultar();",
-                                                                    inline => "1",
-                                        ) ;
-                [% END %]
-        </div>-->
-      </form>
-    </section>
-</fieldset>
+	    <fieldset>
+	        <legend class="titulo_legend">[% "Reservas activas" | i18n %]</legend>
+	  
+	          <div class="control-group">
+	              <label class="control-label" for="tipoReserva">[% "Seleccione el tipo de reserva" | i18n %]</label>
+	              <div class="controls">
+	                  <select name="tipoReserva" id="tipoReserva" onchange="consultar();">
+	                      <option selected="selected" value="EJ" id="EJ">[% "Por ejemplar" | i18n %]</option>
+	                      <option value="GR" id="GR">[% "Por grupo" | i18n %]</option>
+	                      <option value="TO" id="TO">[% "Todas" | i18n %]</option>
+	                  </select>
+	              </div>
+	          </div>
+	    
+	          <div class="form-actions">
+	                [% PERL %]
+	                                print C4::AR::Filtros::action_button( 
+	                                                                    title    =>  "[% 'Buscar' | i18n %]",
+	                                                                    button   =>  "btn btn-primary",
+	                                                                    action =>  "consultar();",
+	                                        ) ;
+	                [% END %]
+	        </div>
+	       </fieldset>
+     </form>
+</section>
 
 <div id="result"></div>
 
